<?xml version="1.0"?>
<package>
  <name>rtt_ros_control_node</name>
  <version>0.0.0</version>
  <description>The rtt_ros_control_node package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>

  <build_depend>hw_interface_example</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>hw_interface_example</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <plugin_depend>rtt_rosnode</plugin_depend>
  </export>
</package>
